--- a/index.html
+++ b/index.html
@@ -1,8 +1,96 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cats Website</title>
+    <style>
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+        .cat-container {
+            text-align: center;
+            margin: 20px;
+        }
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f3f3f3;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+        }
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            padding: 10px 20px;
+        }
+        nav a:hover {
+            background-color: #555;
+        }
+        .cat-container {
+            text-align: center;
+            margin: 20px auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 600px;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 10px;
+        }
+        iframe {
+            width: 100%;
+            height: 400px;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<h1>Hello Me</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <h1>Welcome to the Cats Website!</h1>
+    <header>
+        <h1>Cats Website</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+
+    <div class="cat-container">
+        <h2>Insane cat</h2>
+        <img src="Images/cat-lol.gif" alt="Cute Cat 1">
+        <p>Description of cute cat 1.</p>
+    </div>
+
+    <div class="cat-container">
+        <h2>Goofy Cat</h2>
+        <img src="Images/IMG_6018.png" alt="Adorable Kitten 1">
+        <p>Description of adorable kitten 1.</p>
+    </div>
+
+    <div class="cat-container">
+        <h2>Funny Cats</h2>
+        <img src="Images/catjam.gif" alt="Funny Cat 1">
+        <p>Description of funny cat 1.</p>
+    </div>
+
+    <div class="cat-container">
+        <h2>Featured Video</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/MmzyrzMj9FU" frameborder="0" allowfullscreen></iframe>
+    </div>
+
 </body>
 </html>
