--- a/about.html
+++ b/about.html
@@ -83,8 +83,7 @@
             </div>
             <div class="description">
                 <h2>Description</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sit amet sem nec mi rhoncus scelerisque. Vestibulum consequat lorem non turpis tempor mollis. Nullam nec tellus vel leo luctus congue. Vivamus eleifend posuere enim, nec fermentum nisi dignissim a. Nam consequat, neque nec lacinia interdum, magna odio suscipit arcu, nec rhoncus eros ante vel eros.</p>
-                <p>Nulla facilisi. Ut volutpat sodales velit vel faucibus. Nam rhoncus lorem eu purus luctus auctor. Mauris ullamcorper, lacus non posuere aliquet, sapien tortor tincidunt eros, ut ullamcorper velit sem ut ipsum. Duis vehicula feugiat tincidunt. Aliquam erat volutpat.</p>
+                <p>Meet Sophie, the goofball extraordinaire! 🐾 From her morning routine of chasing imaginary mice under the bed 🐭 to her midday nap sessions in the most awkward positions imaginable 🛌, Sophie never fails to keep us entertained. She's mastered the art of knocking things off shelves with her tail just to see them fall 🙀, and her attempts at "hunting" her own tail are both hilarious and adorable. 🌀 When it comes to mealtime, she's the ultimate drama queen, dramatically flopping down in front of her bowl as if she hasn't eaten in days 🍲.</p>
             </div>
         </div>
     </body>
