--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,18 @@
             </nav>
         </header>
          <div>
-            <p>T</p>
+            <p>
+                Like to learn more about cat? here is our contact information 
+            </p>
+        <p>
+                ####-###-####
+            </p>
+            <a href="cat@gmail.com">cat@gmail.com</a>
+
+        <p> 
+            Will respond when we want
+
+            </p>
         </div>   
     </body>
 </html> 
