--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
 
     <div class="cat-container">
-        <h2>Featured Video</h2>
+        <h2>Cat soundtrack</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/ZnLHjCRp7uA" frameborder="0" allowfullscreen></iframe>
     </div>
 
