--- a/gallery.html
+++ b/gallery.html
@@ -39,6 +39,20 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             max-width: 600px;
         }
+        .gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            grid-gap: 20px;
+        }
+        .gallery img {
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+            transition: transform 0.3s ease-in-out;
+        }
+        .gallery img:hover {
+            transform: scale(1.05);
+        }
     
 </style>
     <body>
@@ -53,7 +67,16 @@
             </nav>
         </header>
          <div>
-            <p>T</p>
+            <h2>Gallery</h2>
+        <div class="gallery">
+            <img src="Images/IMG_3540.jpg" alt="Image 1">
+            <img src="Images/IMG_4024.jpg" alt="Image 2">
+            <img src="Images/IMG_5187.jpg" alt="Image 3">
+            <img src="Images/IMG_5281.jpg" alt="Image 1">
+            <img src="Images/IMG_5366.png" alt="Image 2">
+            <img src="Images/IMG_5320.jpg" alt="Image 3">
+            <!-- Add more images as needed -->
+        </div>
         </div>   
     </body>
 </html> 
