--- a/about.html
+++ b/about.html
@@ -71,19 +71,22 @@
         <header>
             <h1>Cats Website</h1>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="gallery.html">Gallery</a>
-                <a href="contact.html">Contact</a>
+            <a href="about.html">About</a>
+            <a href="cypress.html">Cypress</a>
+            <a href="selenium.html">Selenium</a>
+            <a href="compare.html">Comparison</a>
             </nav>
         </header> 
         <div class="container">
             <div class="image">
-                <img src="Images/IMG_6018.png" alt="Image">
+                <img src="Images/images.png" alt="Image">
             </div>
             <div class="description">
                 <h2>Description</h2>
-                <p>Meet Sophie, the goofball extraordinaire! 🐾 From her morning routine of chasing imaginary mice under the bed 🐭 to her midday nap sessions in the most awkward positions imaginable 🛌, Sophie never fails to keep us entertained. She's mastered the art of knocking things off shelves with her tail just to see them fall 🙀, and her attempts at "hunting" her own tail are both hilarious and adorable. 🌀 When it comes to mealtime, she's the ultimate drama queen, dramatically flopping down in front of her bowl as if she hasn't eaten in days 🍲.</p>
+                <p>Testing is a crucial aspect of software development, ensuring that applications meet quality standards, perform as expected, and are free of bugs and errors. It involves systematically verifying and validating software against requirements, specifications, and user expectations. Testing encompasses various techniques and approaches, including unit testing, integration testing, system testing, and acceptance testing. Through testing, developers identify defects early in the development process, allowing for timely fixes and improvements, which ultimately leads to more reliable and robust software products.
+
+                    Automated testing is a practice that involves using software tools and scripts to automate the execution of test cases and verify application functionality. It offers several benefits, including faster test execution, repeatability, and increased test coverage. .</p>
+            <p>Two popular tools for automated testing of web applications are Cypress and Selenium. Cypress is a modern end-to-end testing framework known for its simplicity, speed, and powerful features. It provides automatic waiting, real-time reloads, and time-traveling capabilities, making it easy to write and maintain tests. On the other hand, Selenium is a widely-used open-source testing framework that supports multiple programming languages and browsers. It offers cross-browser compatibility testing and integrates with various testing frameworks and CI/CD tools. Both Cypress and Selenium play essential roles in automated testing, empowering developers to create reliable and efficient test suites for web applications</p>
             </div>
         </div>
     </body>
