--- a/selenium.html
+++ b/selenium.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="Automation Testing">
+        <meta name="keywords" content="Selenium, Features">
+        <meta name="author" content="Ben Maylin">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      </head>
 <style>
  .cat-container {
             text-align: center;
@@ -66,7 +72,7 @@
             <a href="compare.html">Comparison</a>
             </nav>
         </header>
-        <div class="container"
+        <div class="container">
             <div class="description">
             <p>Selenium is an open-source automated testing framework primarily used for web applications. It provides a suite of tools and libraries for automating web browsers across different platforms and programming languages. Selenium is widely known for its versatility, allowing developers and testers to write tests in multiple programming languages, including Java, Python, C#, and JavaScript.
 
