--- a/compare.html
+++ b/compare.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Automation Testing">
+    <meta name="keywords" content="Comparison, Features">
+    <meta name="author" content="Ben Maylin">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
     <title>Selenium vs Cypress</title>
     <style>
         /* You can add your CSS styles here */
@@ -66,7 +71,7 @@
             background-color: #f2f2f2;
         }
     </style>
-</head>
+
 <body>
     <header>
         <h1>Testing @ 383</h1>
