--- a/cypress.html
+++ b/cypress.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="Automation Testing">
+        <meta name="keywords" content="Cypress, Features">
+        <meta name="author" content="Ben Maylin">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      </head>
 <style>
  .cat-container {
             text-align: center;
