--- a/about.html
+++ b/about.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="title" content="Testing - About us">
-        <meta name="description" content="Automation Testing">
-        <meta name="keywords" content="Automation, Cypress, Selenium">
+        <meta name="description" content="Automation Testing"> 
+        <meta name="keywords" content="Automation, Cypress, Selenium">  <!-- doesnt really effect SEO, but used to -->
         <meta name="author" content="Ben Maylin">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+        <title>Testing - About us</title>
+        <link rel="shortcut icon" type="x-icon" href="/Images/cropped-favicon-free-img.png">
 
       </head>
 
@@ -88,14 +88,14 @@
             <a href="compare.html">Comparison</a>
             </nav>
         <section class="container">
-        <section class="image">
-        <section class="description">
-                <img src="Images/images.png" alt="Image">
+            <section class="image"> <img src="Images/images.png" alt="Image"></section>
+            <section class="description">
                 <h2>Description</h2>
                 <p>Testing is a crucial aspect of software development, ensuring that applications meet quality standards, perform as expected, and are free of bugs and errors. It involves systematically verifying and validating software against requirements, specifications, and user expectations. Testing encompasses various techniques and approaches, including unit testing, integration testing, system testing, and acceptance testing. Through testing, developers identify defects early in the development process, allowing for timely fixes and improvements, which ultimately leads to more reliable and robust software products.
 
                     Automated testing is a practice that involves using software tools and scripts to automate the execution of test cases and verify application functionality. It offers several benefits, including faster test execution, repeatability, and increased test coverage. .</p>
-            <p>Two popular tools for automated testing of web applications are Cypress and Selenium. Cypress is a modern end-to-end testing framework known for its simplicity, speed, and powerful features. It provides automatic waiting, real-time reloads, and time-traveling capabilities, making it easy to write and maintain tests. On the other hand, Selenium is a widely-used open-source testing framework that supports multiple programming languages and browsers. It offers cross-browser compatibility testing and integrates with various testing frameworks and CI/CD tools. Both Cypress and Selenium play essential roles in automated testing, empowering developers to create reliable and efficient test suites for web applications</p>
+                <p>Two popular tools for automated testing of web applications are Cypress and Selenium. Cypress is a modern end-to-end testing framework known for its simplicity, speed, and powerful features. It provides automatic waiting, real-time reloads, and time-traveling capabilities, making it easy to write and maintain tests. On the other hand, Selenium is a widely-used open-source testing framework that supports multiple programming languages and browsers. It offers cross-browser compatibility testing and integrates with various testing frameworks and CI/CD tools. Both Cypress and Selenium play essential roles in automated testing, empowering developers to create reliable and efficient test suites for web applications</p>
+            </section>
         </section>
     </body>
 </html> 
