--- a/about.html
+++ b/about.html
@@ -2,12 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="shortcut icon" type="x-icon" href="/Images/cropped-favicon-free-img.png">
         <meta name="description" content="Automation Testing"> 
         <meta name="keywords" content="Automation, Cypress, Selenium">  <!-- doesnt really effect SEO, but used to -->
         <meta name="author" content="Ben Maylin">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:image" href="/Images/images (6).jpeg" />
+
         <title>Testing - About us</title>
-        <link rel="shortcut icon" type="x-icon" href="/Images/cropped-favicon-free-img.png">
+       
 
       </head>
 
