--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 </style>
     <body>
         <header>
-            <h1>About us - Testing @ 383</h1>
+            <h1>About us - Testing using Automation</h1>
         </header> 
             <nav>
             <a href="about.html">About</a>
